* set better layout and viewlet as default for navigation page
  [gotcha]

* styling and i18n
  [gotcha]

* setup portal factory and id calculated from title for Plone 2.1
  [gotcha]
 
* register cleanIndexes setup widget in portal_migration to remove wrongly
  indexed software.
  [gotcha]

* fix indexing : software elements like layout registry, viewlet registry,
  layouts, viewlets, composite container and elements are not indexed
  anymore.
  [gotcha]

* fix SearchableText at creation time
  [gotcha]

* fix package so that it can load when ATContentTypes is not installed
  [gotcha]
